Wed Feb  8 10:52:36 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/readline/readline.c (Init_readline): fix wrong condition.

Wed Feb  8 10:50:11 2012  Naohisa Goto  <ngotogenome@gmail.com>

	* test/ruby/test_rubyoptions.rb (test_script_from_stdin): slave pty
	  should be manipulated because master pty may not be a tty on some
	  environment (e.g. Solaris). [Bug:#5222] [ruby-dev:44420]

Wed Feb  8 10:38:36 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in (CFLAGS): append ARCH_FLAG.

	* configure.in (ARCH_FLAG): exclude from CFLAGS.

Wed Feb 08 09:19:00 2012  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl_cipher.c: Add warning about key as IV.

Wed Feb  8 10:37:31 2012  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl_cipher.c: Update and complete documentation.

Wed Feb 08 09:57:33 2012  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl_asn1.c: Call INT2NUM only once for GeneralString.
	  Thanks to Mantas Mikulenas for noticing and providing a patch!
	  [ruby-core:42358] [Bug #5972]

Wed Feb  8 10:34:59 2012  TAKAO Kouji  <kouji@takao7.net>

	* ext/readline/readline.c (readline_attempted_completion_function):
	  in Readline module with GNU Readline 6 case, Readline module
	  resets completion_append_character to " ", after it executes
	  completion. So, Readline module stores
	  completion_append_character, and Readline module always sets it
	  after Readline module executes completion. [ruby-dev:43456]
	  [Feature #4635]

Wed Feb  8 09:47:52 2012  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_sleep.rb (test_sleep_5sec): 0.1sec tolerance is too
	  small for busy environment.

Wed Feb  8 09:45:23 2012  Tanaka Akira  <akr@fsij.org>

	* test/dbm/test_dbm.rb: split tests for read only database.

	* test/gdbm/test_gdbm.rb: ditto.

Wed Feb  8 09:43:48 2012  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* error.c (name_err_mesg_to_str): clear rb_thread_t::errinfo when