@@ -1,3 +1,11 @@
+Wed Feb  8 10:52:51 2012  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* ext/readline/readline.c (Init_readline): like r18313, libedit's
+	  replace_history_entry may use offset instead of which.
+	  so introduce history_replace_offset_func and initialize it.
+
+	* ext/readline/readline.c (hist_set): use history_replace_offset_func.
+
 Wed Feb  8 10:52:36 2012  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* ext/readline/readline.c (Init_readline): fix wrong condition.
